Login Screen, FAB Buttons added to 3 screens, log in button switches activity

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,9 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:text="Search Fragment"
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView0" />
+        android:inputType="textPersonName"
+        android:text="Search for a Hunt..."
+        android:ems="10"
+        android:id="@+id/huntSearch" />
 </FrameLayout>
