--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,21 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+
+    <!--
+
+    <ImageView
+        android:src="@drawable/angular_texture.jpg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/bg" />
+
+-->
     <gradient
         android:angle="135"
-        android:centerColor="#4CAF50"
-        android:endColor="#2E7D32"
-        android:startColor="#81C784"
+        android:centerColor="#bfbfbf"
+        android:endColor="#d6d6d6"
+        android:startColor="#bfbfbf"
         android:type="linear" />
+
+
 </shape>
