Changed the way the navigation draw behaves to have percistance in the fragments added a hunt view screen showing a hunt, still needs to be connected to the database but for now, can be accessed from hunt creation screen.

--- a/app/src/main/res/layout/activity_create_hunt.xml
+++ b/app/src/main/res/layout/activity_create_hunt.xml
@@ -89,7 +89,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        tools:context="com.example.szymon.myapplication.MapsActivity" />
+        tools:context="team18.com.plunder.CreateHunt" />
 
     <ScrollView
         android:id="@+id/add_waypoint_form"
