--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,20 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!-- Manage Hunts dimensions -->
+    <dimen name="item_offset">10dp</dimen>
+    <dimen name="detail_backdrop_height">250dp</dimen>
+    <dimen name="backdrop_title">30dp</dimen>
+    <dimen name="backdrop_subtitle">18dp</dimen>
+    <dimen name="card_margin">5dp</dimen>
+    <dimen name="card_hunt_radius">0dp</dimen>
+    <dimen name="hunt_cover_height">160dp</dimen>
+    <dimen name="hunt_title_padding">10dp</dimen>
+    <dimen name="hunt_title">15dp</dimen>
+    <dimen name="songs_count_padding_bottom">5dp</dimen>
+    <dimen name="songs_count">12dp</dimen>
+    <dimen name="ic_hunt_overflow_width">20dp</dimen>
+    <dimen name="ic_hunt_overflow_height">30dp</dimen>
+    <dimen name="ic_hunt_overflow_margin_top">10dp</dimen>
 </resources>
