Qr scanner impleented, still missing manual input implementation.

--- a/app/src/main/res/layout/dialog_manual_input.xml
+++ b/app/src/main/res/layout/dialog_manual_input.xml
@@ -15,7 +15,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter waypoint code"
-            android:inputType="textAutoCorrect"
+            android:maxLength="5"
+            android:inputType="number"
             android:cursorVisible="true"
             android:maxLines="1"
             android:layout_gravity="center"
