--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context="team18.com.plunder.LoginActivity"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="@drawable/login_bg">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -68,6 +69,7 @@
         android:id="@+id/tvRegister"
         android:elevation="0dp"
         android:textAlignment="center"
+        android:layout_marginTop="8dp"
         android:layout_weight="0.02"
         tools:textSize="16sp"
         />
