--- a/app/src/main/res/layout/fragment_manage_events.xml
+++ b/app/src/main/res/layout/fragment_manage_events.xml
@@ -6,7 +6,11 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:text="Manage Events Fragment"
+        android:text="Manage plunders screen is Work in progress. Please check back later!"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:textSize="30dp"
+        android:textColor="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView4" />
