--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,8 +5,12 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:text="Settings Fragment"
+        android:text="Settings screen is Work in progress. Please check back later!"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:textSize="30dp"
+        android:textColor="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView5" />
+        android:id="@+id/textView4" />
 </FrameLayout>
