--- a/app/src/main/res/values/google_maps_api.xml
+++ b/app/src/main/res/values/google_maps_api.xml
@@ -15,5 +15,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDbAphKL9cO608OzvUBISoMrum8tzGCVN4</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">/* API Key goes here! */</string>
 </resources>
